# Internship

./: .gitignore  README.md
Homework/Task_11_UnitTesting/: GetProductAmount.cpp  IsLeapYear.cpp
Homework/Task_12_LinuxDevelopment/copyfile/: Makefile
Homework/Task_12_LinuxDevelopment/pipe/: Makefile
Homework/Task_13_MacOSDevelopment/: candidates.json  main.swift
Homework/Task_1_FactoryMethod/: CMakeLists.txt  file.h  file_writer.h  main.cpp
Homework/Task_2_CodeReview/: CMakeLists.txt  codereviewtask_myvector.hpp  main.cpp  myvector.h
Homework/Task_3_STL/: homework.txt
Homework/Task_4_ThreadPool/: CMakeLists.txt
Homework/Task_5_Network/: CMakeLists.txt  README.md  client.cpp  sock_utils.h
Homework/Task_6_IPC/: CMakeLists.txt  client.cpp  server.cpp
Homework/Task_7_ResourceManagement/: file_guard.cpp  shared_ptr.cpp
Homework/Task_8_ForwardList/: CMakeLists.txt  README.md  forward_list.h  main.cpp
Homework/Task_9_QtBasicConcepts/: CMakeLists.txt  counter.cpp
Task_10_QtGUIviaQML/: ImageDirectory.cpp  ImageDirectory.h  imageviewer.pro  main.cpp  main.qml
Task_11_UnitTesting/: CMakeLists.txt  main.cpp
Task_12_LinuxDevelopment/pipe/: pipe.c
Task_14_Blockchain/: KittenRegistry.sol
Task_1_FactoryMethod/: directory_checker.cpp  directory_checker.h  file_writer.cpp
Task_4_ThreadPool/: blocking_queue.h  main.cpp  thread_pool.cpp  thread_pool.h
Task_5_Network/: Makefile  server.cpp
Task_6_IPC/: README.md
Task_7_ResourceManagement/: CMakeLists.txt  shared_ptr.h  shared_ptr_cb.h  socket_deleters.cpp
Task_9_QtBasicConcepts/: counter.h  main.cpp
(+3 files in other folders)
